ARROW-8112: [FlightRPC][C++] make sure status codes round-trip through gRPC